# Y

./: .envrc  2023-10-10-entropy-ranking-formula-summary.md  Cargo.toml  Dockerfile  README.md  flake.nix  fly.toml  global-brain-writeup.md  justfile  package.json  playwright.config.ts  process-compose-dev.yaml  schema.sql
.github/workflows/: build.yml
migrations/: 20230915152610_init.sql
scripts/: sorted_schema
src/: auth.rs  command_line_args.rs  db.rs  db_setup.rs  error.rs  http_server.rs  main.rs  probabilities.rs  structs.rs  util.rs
src/api/: mod.rs
src/lib/: auth.rs  axum_extractors.rs  mod.rs  structs.rs  structs_api.rs
src/pages/: base_template.rs  communities.rs  components.rs  create_post.rs  frontpage.rs  hashtags.rs  mod.rs  positions.rs  tags.rs  view_post.rs  vote.rs
src/pages/user/: options.rs
static/: site.webmanifest
static/css/: main.css  vote.css
static/js/: base.js
