[workspace]

[package]
name = "y"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
embed_migrations = []

[dependencies]
anyhow = "1.0.75"
async-std = "1.12.0"
async-trait = "0.1.73"
serde = { version = "1.0.168", features = ["derive"] }
serde_json = "1.0.106"
sqlx = { version = "0.7", features = ["sqlite", "macros", "runtime-tokio"] }
tracing = "0.1.37"
tokio = { version = "1.32.0", features = ["full"] }
num-derive = "0.3.3"
num-traits = "0.2.16"

argon2 = "0.5.0"
axum = { version = "0.6.20", features = ["headers", "macros"] }
base64 = "0.21.4"
chrono = "0.4.30"
clap = { version = "4.4.2", features = ["env", "derive"] }
csv = "1.2.2"
function_name = "0.3.0"
futures = "0.3.28"
http = "0.2.9"
maud = { version = "0.25.0", features = [
    "axum",
] } # https://github.com/lambda-fairy/maud/issues/366
mime_guess = "2.0.4"
qrcode = "0.12.0"
rand = "0.8.5"
rust-embed = "8.0.0"
tower-cookies = "0.9.0"
tower-http = { version = "0.4.4", features = [
    "fs",
    "compression-gzip",
    "trace",
] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }
once_cell = "1.18.0" # for lazy global variables

[profile.dev.package.sqlx-macros]
# speed up compile time verification (https://github.com/launchbadge/sqlx#compile-time-verification)
opt-level = 3

[profile.release]
# opt-level = 0
lto = true # link time optimization
